hero section done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Personal Website</title>
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <header class="site-header">
+            <div class="site-logo">
+                <a href="#">
+                    <img
+                        src="./assets/site-logo.png"
+                        alt="site-logo"
+                        width="82"
+                    />
+                </a>
+            </div>
+            <div class="site-links">
+                <nav class="main-nav">
+                    <a href="#" class="nav-item">Home</a>
+                    <a href="#" class="nav-item">Skillset</a>
+                    <a href="#" class="nav-item">About Me</a>
+                    <a href="#" class="nav-item">Contact</a>
+                </nav>
+                <div class="pipe"></div>
+                <ul class="social-media">
+                    <li class="social-icon">
+                        <a class="link" href="#">
+                            <img src="./assets/instagram.svg" alt="" />
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="link" href="#">
+                            <img src="./assets/tiktok.svg" alt="" />
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="link" href="#">
+                            <img src="./assets/facebook.svg" alt="" />
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="link" href="#">
+                            <img src="./assets/twitter.svg" alt="" />
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a class="link" href="#">
+                            <img src="./assets/discord.svg" alt="" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <main class="site-main">
+            <section class="section-hero">
+                <div class="text-container">
+                    <div class="hero-heading">
+                        <div class="subtitle">HI, I’M ALEX</div>
+                        <div class="title">I’M A JUNIOR QA ENGINEER</div>
+                    </div>
+                    <div class="hero-subheading">
+                        Im 19 years old talented Junior Manual QA Engineer. Im
+                        currently working at AdHash Bulgaria.
+                    </div>
+                    <div class="cta">VIEW MORE</div>
+                </div>
+                <div class="hero-image">
+                    <img src="./assets/hero.png" alt="hero-image">
+                </div>
+            </section>
+        </main>
+        <footer class="site-footer"></footer>
+    </body>
 </html>
